--- a/views/index.html
+++ b/views/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>ExpressGram</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">ExpressGram</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -37,6 +38,43 @@
 
       <div class="container" style="padding-top:60px">
         <h1>Welcome to ExpressGram</h1>
+        <div class="card">
+          <img class="card-img-top" style="height:500px"src="https://images.pexels.com/photos/16038633/pexels-photo-16038633/free-photo-of-a-web-made-by-a-spider.jpeg">
+          <div class="card-body">
+            <h3 class="card-title">suluxan</h3>
+            <h5 class="card-title">3 days ago</h5>
+
+            <p class="card-text">spider web in the wild</p>
+            <button class="btn btn-primary">like<i class="fa fa-thumbs-up"></i></button>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top" style="height:500px"src="https://images.pexels.com/photos/16038633/pexels-photo-16038633/free-photo-of-a-web-made-by-a-spider.jpeg">
+          <div class="card-body">
+            <h5 class="card-title">suluxan</h5>
+            <p class="card-text">spider web in the wild</p>
+            <button class="btn btn-primary">like<i class="fa fa-thumbs-up"></i></button>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top" style="height:500px"src="https://images.pexels.com/photos/16038633/pexels-photo-16038633/free-photo-of-a-web-made-by-a-spider.jpeg">
+          <div class="card-body">
+            <h5 class="card-title">suluxan</h5>
+            <p class="card-text">spider web in the wild</p>
+            <button class="btn btn-primary">like<i class="fa fa-thumbs-up"></i></button>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top" style="height:500px"src="https://images.pexels.com/photos/16038633/pexels-photo-16038633/free-photo-of-a-web-made-by-a-spider.jpeg">
+          <div class="card-body">
+            <h5 class="card-title">suluxan</h5>
+            <p class="card-text">spider web in the wild</p>
+            <button class="btn btn-primary">like<i class="fa fa-thumbs-up"></i></button>
+          </div>
+        </div>
 
       </div>
 </body>
