new tabs (needs to refactored with layouts/templates)

--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="/instaPosts">InstaPosts</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/profiles/add">Add New Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/instaPosts/add">Add New Insta Post</a>
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
