--- a/views/addInstaPost.hbs
+++ b/views/addInstaPost.hbs
@@ -2,18 +2,19 @@
   <h1>Add New ExpresGram Post!</h1>
   <form action="/instaPosts/add" method="POST" enctype="multipart/form-data">
     <div class="form-group">
-      <label for="profile">Profile</label>
+      <label for="profileID">Profile</label>
 
-      <select name="profile" class="form-select">
-        <option value="1">suluxanmohanraj</option>
-        <option value="2">beyonce</option>
-        <option value="3">kyliejenner</option>
+
+      <select name="profileID" id="profileID" class="form-select">
+      {{#each data}}
+        <option value="{{profileID}}">{{profile}}</option>
+      {{/each}}
       </select>
     </div>
 
     <div class="form-group">
-      <label for="profile">Photo/Video Upload</label>
-      <input type="file" class="form-control" id="instaFile" name="instaFile">
+      <label for="photo">Photo/Video Upload</label>
+      <input type="file" class="form-control" id="photo" name="photo">
     </div>
 
     <div class="form-group">
