photo instead of instaFile (to match sequelize schema)

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
   {{#each data}}
   <div class="card">
     <img class="card-img-top" style="height:500px"
-      src="{{instaFile}}">
+      src="{{photo}}">
     <div class="card-body">
       <h5 class="card-title">{{profile}}</h5>
       <p class="card-text">{{caption}}</p>
