--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -14,11 +14,11 @@
                     <a class="nav-link" href="/profiles">Profiles</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/instaPosts">InstaPosts</a>
+                    <a class="nav-link" href="/">InstaPosts</a>
                 </li>
-                <li class="nav-item">
+                {{!-- <li class="nav-item">
                     <a class="nav-link" href="/instaPosts/add">Add New Insta Post</a>
-                </li>
+                </li> --}}
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
