register added to nav bar

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -16,9 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">InstaPosts</a>
                 </li>
-                {{!-- <li class="nav-item">
-                    <a class="nav-link" href="/instaPosts/add">Add New Insta Post</a>
-                </li> --}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
