--- a/views/loginUser.hbs
+++ b/views/loginUser.hbs
@@ -7,9 +7,9 @@
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="text" class="form-control" id="password" name="password">
+            <input type="password" class="form-control" id="password" name="password">
         </div>
         </br>
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
 </div>
